ajustes no html 4

--- a/04_modelos_consumo/index.html
+++ b/04_modelos_consumo/index.html
@@ -137,7 +137,6 @@
                           Designer no processo de criação de ambiente<br>
                           Fonte: Freepik (2023)
                         </p>
-                        <p class="acessivel no-print">A imagem mostra uma planta baixa em vista aérea e mãos de uma profissional fazendo a escolha de cores e materiais.</p>
                         <p>Na etapa da criação de ambientes alinhados ao conceito de economia circular, o <i>designer</i> de interiores pode realizar algumas escolhas que otimizem o aproveitamento de materiais e otimização dos espaços. É possível citar algumas dessas ações como o <i>upcycling</i> e o <i>repurposing</i>, que dizem respeito ao reaproveitamento de materiais e móveis descartados, transformando-os em novos itens para uso no ambiente. É o caso, por exemplo, de criar uma estante utilizando paletes de madeira ou transformar uma antiga porta em uma mesa de jantar. Ainda, o <i>designer</i> pode optar por materiais e revestimentos de baixo impacto ambiental, como tintas e vernizes não tóxicos, madeira certificada e pisos reciclados. Além disso, está ao alcance do <i>designer</i> utilizar mobiliário recondicionado ou de segunda mão, aplicando técnicas de restauro e revitalização para dar uma nova vida a essas peças. </p>
                         <p>Essas ações exemplificam como um <i>design</i> de interiores pode aderir à economia circular no momento da criação de espaços, indo além da estética e da funcionalidade e incorporando práticas que respeitam o meio ambiente, promovem a reutilização de recursos e contribuem para a construção de ambientes mais sustentáveis e conscientes.</p>
                         <div class="modal-footer">
@@ -192,7 +191,6 @@
                           Profissional trabalhando na manutenção e no reparo de peças de madeira<br>
                           Fonte: Freepik (2023)
                         </p>
-                        <p class="acessivel no-print">Na imagem um homem corta uma placa de madeira com serra elétrica. </p>
                         <p>Nessas etapas, cabe ao <i>designer</i> informar o cliente e, se possível, estabelecer sempre um cronograma de manutenção preventiva para elementos do ambiente, como sistemas elétricos, hidráulicos, equipamentos e móveis, a fim de evitar problemas futuros e aumentar a durabilidade desses elementos.</p>
                         <div class="modal-footer">
                           <button type="button" class="botao borda-primaria-03" data-dismiss="modal">Fechar</button>
@@ -219,7 +217,6 @@
                           <i>Designer</i> trabalhando na reutilização de sofá a partir da troca de estofado<br>
                           Fonte: Freepik (2023)
                         </p>
-                        <p class="acessivel no-print">Na imagem há um profissional de design escolhendo um tecido para estofar sofá. Ele posiciona uma amostra de tecido na cor vinho, sobre um sofá terracota. Sobre o sofá há planta baixa do espaço com algumas amostras de cores de tecidos.</p>
                         <p>Nessa etapa, o <i>designer</i> pode utilizar alguns recursos, por exemplo, móveis e objetos de decoração adquiridos de segunda mão, como antiquários, brechós ou lojas de móveis usados. Além disso, quando o projeto for destinado a feiras, eventos, pontos de venda ou interiores comerciais, o <i>designer</i> pode criar espaços temporários ou <i>pop-ups</i> que podem ser desmontados e reutilizados em diferentes locais e eventos. </p>
                         <div class="modal-footer">
                           <button type="button" class="botao borda-primaria-03" data-dismiss="modal">Fechar</button>
@@ -246,7 +243,6 @@
                           Utensílios de madeira produzidos a partir da reciclagem <br>
                           Fonte: Bing (2023)
                         </p>
-                        <p class="acessivel no-print">A imagem mostra utensílios de cozinha, como colheres dos mais variados tamanhos, tigelas e espátulas, todos em madeira, produzidos a partir de reciclagem de outros utensílios.</p>
                         <p>O conceito de reciclagem também pode ser aplicado na energia, por meio da integração de energias renováveis ou com a reciclagem de calor residual. Observe: </p>
                         <div class="no-print" aria-hidden="true">
                           <p>Clique ou toque para visualizar o conteúdo.</p>
@@ -270,7 +266,6 @@
                                     Painéis solares em residência<br>
                                     Fonte: Freepik (2023)
                                   </p>
-                                  <p class="acessivel no-print">A imagem mostra uma ampla residência, vista em perspectiva a partir da área externa na qual pode ser visto o telhado em duas águas com painéis solares. Ao fundo, há um gramado e, ao horizonte, montanhas e algumas casas. </p>
                                 </div>
                               </div>
                             </div>
@@ -320,7 +315,67 @@
               </div>
             </div>
             <div class="acessivel print">
-              
+              <h3>Criação</h3>
+              <p>Nesta fase, o foco está na concepção do projeto de <i>design</i> de interiores. O objetivo é criar espaços funcionais, esteticamente atraentes e que considerem a sustentabilidade desde o início. Isso inclui a escolha cuidadosa de materiais, a utilização de tecnologias eficientes e a incorporação de elementos modulares que permitam a adaptação do espaço ao longo do tempo.</p>
+              <img src="img/imagem.png" class="center-block img-responsive">
+              <p class="legenda-imagem">
+                <i>Designer</i> no processo de criação de ambiente<br>
+                Fonte: Freepik (2023)
+              </p>
+              <p class="no-print">A imagem mostra uma planta baixa em vista aérea e mãos de uma profissional fazendo a escolha de cores e materiais.</p>
+              <p>Na etapa da criação de ambientes alinhados ao conceito de economia circular, o <i>designer</i> de interiores pode realizar algumas escolhas que otimizem o aproveitamento de materiais e otimização dos espaços. É possível citar algumas dessas ações como o <i>upcycling</i> e o <i>repurposing</i>, que dizem respeito ao reaproveitamento de materiais e móveis descartados, transformando-os em novos itens para uso no ambiente. É o caso, por exemplo, de criar uma estante utilizando paletes de madeira ou transformar uma antiga porta em uma mesa de jantar. Ainda, o <i>designer</i> pode optar por materiais e revestimentos de baixo impacto ambiental, como tintas e vernizes não tóxicos, madeira certificada e pisos reciclados. Além disso, está ao alcance do <i>designer</i> utilizar mobiliário recondicionado ou de segunda mão, aplicando técnicas de restauro e revitalização para dar uma nova vida a essas peças. </p>
+              <p>Essas ações exemplificam como um <i>design</i> de interiores pode aderir à economia circular no momento da criação de espaços, indo além da estética e da funcionalidade e incorporando práticas que respeitam o meio ambiente, promovem a reutilização de recursos e contribuem para a construção de ambientes mais sustentáveis e conscientes.</p>
+              <h3>Produção e utilização</h3>
+              <p>Na etapa de produção e utilização, os materiais e mobiliários selecionados no projeto são efetivamente utilizados na construção e decoração do espaço. A economia circular busca utilizar materiais sustentáveis, reutilizados ou reciclados sempre que possível, minimizando o consumo de recursos naturais e reduzindo o impacto ambiental da produção.</p>
+              <img src="img/imagem.png" class="center-block img-responsive">
+              <p class="legenda-imagem">
+                Designer na etapa de produção de um ambiente<br>
+                Fonte: Freepik (2023)
+              </p>
+              <p class="no-print">Na imagem há um ambiente de estar e uma profissional de design fazendo a decoração de uma prateleira, na qual posiciona um pequeno vaso de cerâmica com flores vermelhas.</p>
+              <p>Entre as ações que o <i>designer</i> pode adotar no momento de produção de espaços está buscar certificações e selos que atestem a sustentabilidade dos produtos e dos materiais utilizados, como o selo FSC (Forest Stewardship Council) para madeira certificada. Ainda, é uma responsabilidade do projetista assegurar que, durante a produção de espaços, os resíduos gerados nesse processo sejam adequadamente separados e destinados à reciclagem, à compostagem ou a outras formas de reutilização.</p>
+              <h3>Manutenção e reparo</h3>
+              <p>A economia circular incentiva a manutenção regular dos espaços e elementos do <i>design</i> de interiores. A conservação adequada dos materiais e mobiliários prolonga sua vida útil e reduz a necessidade de substituição frequente. Além disso, a prática de reparar itens danificados ou desgastados, ao invés de descartá-los, também é valorizada.</p>
+              <img src="img/imagem.png" class="center-block img-responsive">
+              <p class="legenda-imagem">
+                Profissional trabalhando na manutenção e no reparo de peças de madeira<br>
+                Fonte: Freepik (2023)
+              </p>
+              <p class="no-print">Na imagem um homem corta uma placa de madeira com serra elétrica. </p>
+              <p>Nessas etapas, cabe ao <i>designer</i> informar o cliente e, se possível, estabelecer sempre um cronograma de manutenção preventiva para elementos do ambiente, como sistemas elétricos, hidráulicos, equipamentos e móveis, a fim de evitar problemas futuros e aumentar a durabilidade desses elementos.</p>
+              <h3>Reutilização</h3>
+              <p>Quando um projeto de <i>design</i> de interiores chega ao fim de sua vida útil ou é reformulado, a economia circular busca a reutilização dos elementos e móveis existentes. Isso pode envolver a reconfiguração dos espaços, a adaptação de mobiliários ou a reutilização de materiais em novos projetos.</p>
+              <img src="img/imagem.png" class="center-block img-responsive">
+              <p class="legenda-imagem">
+                <i>Designer</i> trabalhando na reutilização de sofá a partir da troca de estofado<br>
+                Fonte: Freepik (2023)
+              </p>
+              <p class="no-print">Na imagem há um profissional de design escolhendo um tecido para estofar sofá. Ele posiciona uma amostra de tecido na cor vinho, sobre um sofá terracota. Sobre o sofá há planta baixa do espaço com algumas amostras de cores de tecidos.</p>
+              <p>Nessa etapa, o <i>designer</i> pode utilizar alguns recursos, por exemplo, móveis e objetos de decoração adquiridos de segunda mão, como antiquários, brechós ou lojas de móveis usados. Além disso, quando o projeto for destinado a feiras, eventos, pontos de venda ou interiores comerciais, o <i>designer</i> pode criar espaços temporários ou <i>pop-ups</i> que podem ser desmontados e reutilizados em diferentes locais e eventos. </p>
+              <h3>Recuperação e reciclagem</h3>
+              <p>Caso não seja possível a reutilização, a economia circular promove a recuperação e reciclagem de materiais, componentes e energias. O objetivo é evitar o descarte em aterros sanitários, dando aos materiais uma segunda chance como matéria-prima para novos produtos.</p>
+              <img src="img/imagem.png" class="center-block img-responsive">
+              <p class="legenda-imagem">
+                Utensílios de madeira produzidos a partir da reciclagem <br>
+                Fonte: Bing (2023)
+              </p>
+              <p class="no-print">A imagem mostra utensílios de cozinha, como colheres dos mais variados tamanhos, tigelas e espátulas, todos em madeira, produzidos a partir de reciclagem de outros utensílios.</p>
+              <p>O conceito de reciclagem também pode ser aplicado na energia, por meio da integração de energias renováveis ou com a reciclagem de calor residual. Observe: </p>
+              <h4>Integração de energias renováveis</h4>
+              <p>O aproveitamento de fontes de energia renováveis é uma maneira significativa de reciclar energias no <i>design</i> de interiores. A instalação de painéis solares no telhado, o uso de turbinas eólicas para gerar energia elétrica ou a implementação de sistemas geotérmicos para aquecimento e resfriamento são exemplos de como o <i>design</i> pode incorporar fontes limpas e renováveis de energia. </p>
+              <p>O <i>designer</i> pode, ainda, propor ao cliente utilizar coletores solares para aquecer a água utilizada nos ambientes, reduzindo o consumo de energia elétrica ou de gás para esse fim. É possível também, em projetos com acesso a corpos d'água em movimento, considerar-se a instalação de geradores hidráulicos para aproveitar a energia cinética da água. Pode-se ainda, em locais propícios, considerar a instalação de geradores eólicos para aproveitar a energia do vento e gerar eletricidade.</p>
+              <img src="img/imagem.png" class="center-block img-responsive">
+              <p class="legenda-imagem">
+                Painéis solares em residência<br>
+                Fonte: Freepik (2023)
+              </p>
+              <p class="no-print">A imagem mostra uma ampla residência, vista em perspectiva a partir da área externa na qual pode ser visto o telhado em duas águas com painéis solares. Ao fundo, há um gramado e, ao horizonte, montanhas e algumas casas. </p>
+              <h4>Reciclagem do calor residual</h4>
+              <p>O <i>design</i> de interiores pode ser planejado para reciclar o calor residual gerado por equipamentos e sistemas, como computadores, equipamentos de iluminação e aparelhos de ar-condicionado. Esse calor pode ser redirecionado para aquecer ambientes, reduzindo a necessidade de aquecimento adicional. </p>
+              <p>Uma ação interessante nesse sentido seria projetar os ambientes considerando a distribuição de calor e a ventilação natural, reduzindo a necessidade de uso de sistemas de aquecimento ou resfriamento. Ainda, pode ser possível projetar, em parceria com engenheiros mecânicos, sistemas que reutilizem águas quentes provenientes de processos como lavagem de roupas ou louças para reduzir o consumo de energia em sistemas de aquecimento de água.</p>
+              <h3>Redução de resíduos</h3>
+              <p>Em todas as etapas do ciclo de vida, a economia circular busca reduzir ao máximo a geração de resíduos. Isso envolve o uso eficiente de materiais, a adoção de práticas de gestão de resíduos responsáveis e a escolha de materiais que possam ser reciclados ou compostados após o fim de sua vida útil. </p>
+              <p>Para cumprir com a redução de resíduos em um projeto, o <i>designer</i> deve fazer um planejamento minucioso do projeto, evitando a compra excessiva de materiais e produtos e assegurando que as quantidades adquiridas sejam adequadamente dimensionadas para o projeto. Além disso, o profissional pode escolher fornecedores que utilizem embalagens minimalistas ou retornáveis, evitando o acúmulo de resíduos de embalagem. </p>
             </div>
           </div>
         </div>
