--- a/02_sustentabilidade_nos_ambientes/index.html
+++ b/02_sustentabilidade_nos_ambientes/index.html
@@ -70,7 +70,7 @@
 
           <!-- - - - - - - - cada página é independente  - - - - - - - - - - -->
           <div class="pagina" >
-            <div class="bloco">
+            <div class="bloco bloco-plantas1">
               <div class="container">
                 <h2>Sustentabilidade nos ambientes construídos</h2>
                 <p>A sustentabilidade está relacionada à ideia de que o uso de recursos para suprir as necessidades da atual geração não pode prejudicar o acesso a eles pelas gerações futuras. Neste conhecimento, será abordada a amplitude do termo sustentabilidade e também como ele se relaciona com os ramos da arquitetura, do <i>design</i> de interiores e da construção civil.</p>
@@ -157,7 +157,7 @@
               </div> 
             </div>
 
-            <div class="bloco" >
+            <div class="bloco escuro">
               <div class="container">
                 <h3>Estratégias de sustentabilidade aplicada</h3>
                 <p>Agora você já entendeu que sustentabilidade vai além de soluções que diminuam o impacto no meio ambiente. Então, confira a seguir quais estratégias podem ser utilizadas no <i>design</i> de interiores e arquitetura para que se tenham projetos mais sustentáveis e que contribuam para o bem-estar das pessoas, do mercado e do meio ambiente.</p>
