--- a/02_sustentabilidade_nos_ambientes/index.html
+++ b/02_sustentabilidade_nos_ambientes/index.html
@@ -81,10 +81,9 @@
                 <div class="no-print" aria-hidden="true">
                   <p>Clique ou toque para visualizar o conteúdo.</p>
                   <div class="painel-tripe">
-                    <button type="button" class="botao-desenvolvimento" data-toggle="modal" data-target="#myModal1"><img src="imgs/bt_1_hover_em_scale.png" alt=""></button>
-                    <button type="button" class="botao-gestao" data-toggle="modal" data-target="#myModal2"> <img src="imgs/bt_2_hover_em_scale.png" alt="" srcset="">
-                    </button>
-                    <button type="button" class="botao-responsabilidade" data-toggle="modal" data-target="#myModal3"><img src="imgs/bt_3_hover_em_scale.png" alt="" srcset=""></button>
+                    <button type="button" class="botao-desenvolvimento" data-toggle="modal" data-target="#myModal1"></button>
+                    <button type="button" class="botao-gestao" data-toggle="modal" data-target="#myModal2"></button>
+                    <button type="button" class="botao-responsabilidade" data-toggle="modal" data-target="#myModal3"></button>
                   </div>
 
                   <div class="modal fade" id="myModal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-live="polite" aria-atomic="true" aria-hidden="false">
@@ -1003,14 +1002,14 @@
                 </p>
                 <div class="no-print" aria-hidden="true">
                   <p>Clique ou toque para visualizar o conteúdo.</p>
-                  <div class="painel">
-                    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal4">Selo Casa Azul</button>
-                    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal5">AQUA-HQE</button>
-                    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal6">LEED</button>
-                    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal6">WELL</button>
-                    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal7">BREEAM</button>
-                    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal8">Selo Procel Edifica</button>
-                    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal9">FSC Brasil</button>
+                  <div class="painel selos">
+                    <button type="button" class="btn btn-lg btn_selo_casa_azul" data-toggle="modal" data-target="#myModal4"></button>
+                    <button type="button" class="btn btn_aqua btn-lg" data-toggle="modal" data-target="#myModal5"></button>
+                    <button type="button" class="btn btn_leed btn-lg" data-toggle="modal" data-target="#myModal6"></button>
+                    <button type="button" class="btn btn_well btn-lg" data-toggle="modal" data-target="#myModal6"></button>
+                    <button type="button" class="btn btn_breeam btn-lg" data-toggle="modal" data-target="#myModal7"></button>
+                    <button type="button" class="btn btn_procel btn-lg" data-toggle="modal" data-target="#myModal8"></button>
+                    <button type="button" class="btn btn_fsc btn-lg" data-toggle="modal" data-target="#myModal9"></button>
                   </div>
 
 
@@ -1137,7 +1136,7 @@ Ao longo dos últimos anos, as certificações passaram a olhar mais atentamente
               </div>
             </div>
 
-            <div class="bloco" >
+            <div class="bloco bloco-plantas-2" >
               <div class="container">
                 <h3>
                   Políticas ambientais vigentes
@@ -1232,7 +1231,7 @@ Ao longo dos últimos anos, as certificações passaram a olhar mais atentamente
               </div>
             </div>
             
-            <div class="bloco" >
+            <div class="bloco escuro" >
               <div class="container">
                <h3>Encerramento</h3>
                 <p>
